--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,6 +1,9 @@
+<!-- 搜索框 -->
+<view>
+  <view class="search">
+    <view class="searchInput">搜索</view>
+  </view>
+</view>
 <view class="nav">
-<view class="item">项目</view>
-<view class="item">文件</view>
-<view class="item">编辑</view>
-<view class="item">工具</view>
+  <view class="item" wx:key="id" wx:for="{{navs}}">{{item.name}}</view>
 </view>
