--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,8 +1,26 @@
 .nav{
   display: flex;
-  padding: 5px
+  padding: 5px;
+  background: #f0f0f0
 }
 .item{
   flex: 1;
   text-align: center
+}
+.search{
+  width: 100%;
+  height: 100rpx;
+  background: #ea4350;
+  display: flex;
+  justify-content: center;
+  align-items: center
+}
+.searchInput{
+width: 700rpx;
+height: 80rpx;
+background: #fff;
+border-radius: 5rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center
 }
