--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,18 +1,67 @@
-
-.search{
+.fenlei {
   width: 100%;
-  height: 100rpx;
-  background: #ea4350;
+  height: 140rpx;
+  margin: 12rpx 0;
   display: flex;
-  justify-content: center;
-  align-items: center
+  justify-content: space-around;
 }
-.searchInput{
-width: 700rpx;
-height: 80rpx;
-background: #fff;
-border-radius: 5rpx;
+
+.fl-det {
+  width: 128rpx;
+  height: 100%;
+}
+
+.fenlei .fl-det image {
+  width: 100%;
+  height: 140rpx;
+}
+
+.fashion {
+  margin-top: 30rpx;
+  width: 750rpx;
+}
+
+.fashion-title {
+  margin-bottom: 10rpx;
+  width: 750rpx;
+}
+
+.fashion-title image {
+  width: 750rpx;
+  height: 60rpx;
+}
+
+.product {
+  width: 100%;
+  /* height: 386rpx; */
   display: flex;
-  justify-content: center;
-  align-items: center
+  justify-content: space-around;
+  flex-wrap: wrap;
+  position: relative;
+}
+
+.product>.product_list:nth-child(4) {
+  position: absolute;
+  right: 256rpx;
+  bottom: 0rpx;
+}
+
+.product>.product_list:nth-child(5) {
+  position: absolute;
+  right: 10rpx;
+  bottom: 0rpx;
+}
+
+.product_list image {
+  width: 232rpx;
+  height: 188rpx;
+}
+
+.product_list:nth-child(2n+1) image {
+  width: 223rpx;
+}
+
+.product_list:nth-child(1) image {
+  width: 232rpx;
+  height: 386rpx;
 }
